--- a/billing.html
+++ b/billing.html
@@ -200,16 +200,151 @@ require('php/functions.php');
                 </header>
                 <div class="main">
                     <div class="row">
-                        <div class="cont12 card">
+                        <div class="cont9 card">
                             <header>
                                 <h4 class="title">Order Display</h4>
-                                <p class="description">Select an order to create an invoice</p>
+                                <p class="description">Orders ready for billing (order status = completed)</p>
                                 <div class="row">
                                     <div class="cont12 card right content">
                                         <input id='stock_search' class='cont12' type='text'></input>
                                     </div>
                                 </div>
                             </header>
+                            <table class="stats">
+                                <tbody>
+                                    <tr>
+                                        <th>Order ID</th>
+                                        <th>Stock</th>
+                                        <th>Location</th>
+                                        <th>Status</th>
+                                    </tr>
+                                    <tr>
+                                        <td>Ritalin LA®</td>
+                                        <td>41</td>
+                                        <td> - </td>
+                                        <td>10.00 mg</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Ritalin LA®</td>
+                                        <td>23</td>
+                                        <td> - </td>
+                                        <td>20.00 mg</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Ritalin LA®</td>
+                                        <td>23</td>
+                                        <td> - </td>
+                                        <td>30.00 mg</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Equasym XL®</td>
+                                        <td>45</td>
+                                        <td> - </td>
+                                        <td>10.00 mg</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Equasym XL® grootverpakking</td>
+                                        <td>11</td>
+                                        <td> - </td>
+                                        <td>20.00 mg</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Medikinet CR®</td>
+                                        <td>177</td>
+                                        <td> - </td>
+                                        <td>10.00 mg</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Medikinet CR®</td>
+                                        <td>21</td>
+                                        <td> - </td>
+                                        <td>20.00 mg</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Medikinet CR®</td>
+                                        <td>42</td>
+                                        <td> - </td>
+                                        <td>30.00 mg</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Medikinet CR®</td>
+                                        <td>100</td>
+                                        <td> - </td>
+                                        <td>40.00 mg</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Selokeen® ZOC 100</td>
+                                        <td>89</td>
+                                        <td> - </td>
+                                        <td>95.00 mg</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <div id='productinfo'></div>
+                            <div id='productcharts' hidden>
+                                <div class='row'>
+                                    <div class='card cont12'>
+                                        <header>
+                                            <h4 class='title'>Stock information</h4>
+                                            <p class='description'>Showing a graph with the stock information regarding the currently selected product</p>
+                                        </header>
+                                        <div id='stockchart'></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id='stockinfo'><?php GetStockInfo(0, 0, 10, '', true); ?></div>
+                            <footer>
+                                <label OnClick='Previous()'>Previous</label>
+                                <label id='pages'>
+                                    <?php
+                                        $items = GetAmountOfStockPages();
+                                        
+                                        for ($i=0; $i < $items / 10; $i++) {
+                                            $j = $i + 1;
+                                            $k = $i * 10;
+                                            if ($k == 0) {
+                                                echo "<label id='$k' OnClick='GoToPage(this)'><b>$j</b> </label>";
+                                            } else {
+                                                echo "<label id='$k' OnClick='GoToPage(this)'>$j </label>";
+                                            }  
+                                        }
+                                    ?>
+                                </label>
+                                <label OnClick='Next()'>Next</label>
+                            </footer>
+                        </div>
+                        <div class="cont3 card">
+                            <header>
+                                <h4 class="title">Outstanding amounts</h4>
+                                <p class="description">Select a costumer to view invoices</p>
+                                <div class="row">
+                                    <div class="cont12 card right content">
+                                        <input id='stock_search' class='cont12' type='text'></input>
+                                    </div>
+                                </div>
+                            </header>
+                            <table class="stats">
+                                <col style="width:57%">
+                                <col style="width:43%">
+                                <tbody>
+                                    <tr>
+                                        <th>Costumer name</th>
+                                        <th>Awaiting</th>
+                                    </tr>
+                                    <tr id="2" onclick="ShowProductInfo(this)">
+                                        <td>Alphega Apotheek De Betuwe</td>
+                                        <td><div class="switcher"><span>&#8364; 723,83</span></div></td>
+                                    </tr>
+                                    <tr id="3" onclick="ShowProductInfo(this)">
+                                        <td>SAL Apotheek Brandevoort</td>
+                                        <td><div class="switcher"><span>&#8364; 2734,22</span></div></td>
+                                    </tr>
+                                    <tr id="4" onclick="ShowProductInfo(this)">
+                                        <td>BENU Apotheek Ghen heij</td>
+                                        <td><div class="switcher"><span>&#8364; 6743,90</span></div></td>
+                                    </tr>
+                                </tbody>
+                            </table>
                             <div id='productinfo'></div>
                             <div id='productcharts' hidden>
                                 <div class='row'>
