--- a/billing_step1.html
+++ b/billing_step1.html
@@ -89,75 +89,87 @@ require('php/functions.php');
                             </header>
                             <table class="stats">
                                 <col style="width:10%">
-                                <col style="width:40%">
+                                <col style="width:28%">
                                 <col style="width:20%">
-                                <col style="width:30%">
+                                <col style="width:22%">
+                                <col style="width:20%">
                                 <tbody>
                                     <tr>
                                         <th>Order ID</th>
                                         <th>Costumer name</th>
                                         <th>Order completed for</th>
                                         <th>Status</th>
+                                        <th>First invoiced</th>
                                     </tr>
                                     <tr>
                                         <td>7563548</td>
                                         <td>Buurtapotheek Albergen</td>
-                                        <td><div class="switcher red">16 days</div></td>
+                                        <td><div class="switcher red">20 days</div></td>
                                         <td><div class="switcher orange">invoiced <div class="switcher white">2&#215;</div></div></td>
+                                        <td><div class="switcher orange">17-12-2017 <div class="switcher white">19 days ago</div></div></td>
                                     </tr>
                                     <tr>
                                         <td>3245785</td>
                                         <td>Apotheek De Poldervaart</td>
                                         <td>2 days</td>
                                         <td><div class="switcher green">billable <div class="switcher white">&#8364; 4537,78</div></div></td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
                                         <td>8272348</td>
                                         <td>Alphega Apotheek Cleij</td>
                                         <td>-</td>
                                         <td><div class="switcher grey">awaits completion <div class="switcher white">489 min</div></div></td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
                                         <td>8793645</td>
                                         <td>SAL Apotheek Brandevoort</td>
                                         <td>1 day</td>
                                         <td><div class="switcher green">billable <div class="switcher white">&#8364; 1036,65</div></div></td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
                                         <td>6152374</td>
                                         <td>Buurtapotheek Albergen</td>
                                         <td>just now</td>
                                         <td><div class="switcher green">billable <div class="switcher white">&#8364; 3254,57</div></div></td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
                                         <td>2934904</td>
                                         <td>Alphega Apotheek De Betuwe</td>
                                         <td>-</td>
                                         <td><div class="switcher grey">awaits completion <div class="switcher white">12 min</div></div></td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
                                         <td>3765344</td>
                                         <td>Buurtapotheek Albergen</td>
                                         <td>-</td>
                                         <td><div class="switcher grey">awaits completion <div class="switcher white">83 min</div></div></td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
                                         <td>8675476</td>
                                         <td>Alphega Apotheek De Betuwe</td>
                                         <td>-</td>
                                         <td><div class="switcher grey">awaits completion <div class="switcher white">156 min</div></div></td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
                                         <td>8476586</td>
                                         <td>SAL Apotheek Brandevoort</td>
                                         <td>-</td>
                                         <td><div class="switcher grey">awaits completion <div class="switcher white">54 min</div></div></td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
                                         <td>1263535</td>
                                         <td>Apotheek De Poldervaart</td>
                                         <td><div class="switcher orange">6 days</div></td>
                                         <td><div class="switcher green">billable <div class="switcher white">&#8364; 7238,64</div></div></td>
+                                        <td>-</td>
                                     </tr>
                                 </tbody>
                             </table>
