--- a/billing_step1.html
+++ b/billing_step1.html
@@ -95,81 +95,81 @@ require('php/functions.php');
                                 <col style="width:20%">
                                 <tbody>
                                     <tr>
-                                        <th>Order ID</th>
-                                        <th>Costumer name</th>
-                                        <th>Order completed for</th>
-                                        <th>Status</th>
-                                        <th>First invoiced</th>
+                                        <th><span>Order ID</span></th>
+                                        <th><span>Costumer name</span></th>
+                                        <th><span>Order completed for</span></th>
+                                        <th><span>Status</span></th>
+                                        <th><span>First invoiced</span></th>
                                     </tr>
                                     <tr>
-                                        <td>7563548</td>
-                                        <td>Buurtapotheek Albergen</td>
-                                        <td><div class="switcher red">20 days</div></td>
-                                        <td><div class="switcher orange">invoiced <div class="switcher white">2&#215;</div></div></td>
-                                        <td><div class="switcher orange">17-12-2017 <div class="switcher white">19 days ago</div></div></td>
+                                        <td><span>7563548</span></td>
+                                        <td><span>Buurtapotheek Albergen</span></td>
+                                        <td><div class="switcher red"><span>20 days</span></div></td>
+                                        <td><div class="switcher orange"><span>invoiced </span><div class="switcher white"><span>2&#215;</span></div></div></td>
+                                        <td><div class="switcher orange"><span>17-12-2017 </span><div class="switcher white"><span>19 days ago</span></div></div></td>
                                     </tr>
                                     <tr>
-                                        <td>3245785</td>
-                                        <td>Apotheek De Poldervaart</td>
-                                        <td>2 days</td>
-                                        <td><div class="switcher green">billable <div class="switcher white">&#8364; 4537,78</div></div></td>
-                                        <td>-</td>
+                                        <td><span>3245785</span></td>
+                                        <td><span>Apotheek De Poldervaart</span></td>
+                                        <td><span>2 days</span></td>
+                                        <td><div class="switcher green"><span>billable </span><div class="switcher white"><span>&#8364; 4537,78</span></div></div></td>
+                                        <td><span>-</span></td>
                                     </tr>
                                     <tr>
-                                        <td>8272348</td>
-                                        <td>Alphega Apotheek Cleij</td>
-                                        <td>-</td>
-                                        <td><div class="switcher grey">awaits completion <div class="switcher white">489 min</div></div></td>
-                                        <td>-</td>
+                                        <td><span>8272348</span></td>
+                                        <td><span>Alphega Apotheek Cleij</span></td>
+                                        <td><span>-</span></td>
+                                        <td><div class="switcher grey"><span>awaits completion </span><div class="switcher white"><span>489 min</span></div></div></td>
+                                        <td><span>-</span></td>
                                     </tr>
                                     <tr>
-                                        <td>8793645</td>
-                                        <td>SAL Apotheek Brandevoort</td>
-                                        <td>1 day</td>
-                                        <td><div class="switcher green">billable <div class="switcher white">&#8364; 1036,65</div></div></td>
-                                        <td>-</td>
+                                        <td><span>8793645</span></td>
+                                        <td><span>SAL Apotheek Brandevoort</span></td>
+                                        <td><span>1 day</span></td>
+                                        <td><div class="switcher green"><span>billable </span><div class="switcher white"><span>&#8364; 1036,65</span></div></div></td>
+                                        <td><span>-</span></td>
                                     </tr>
                                     <tr>
-                                        <td>6152374</td>
-                                        <td>Buurtapotheek Albergen</td>
-                                        <td>just now</td>
-                                        <td><div class="switcher green">billable <div class="switcher white">&#8364; 3254,57</div></div></td>
-                                        <td>-</td>
+                                        <td><span>6152374</span></td>
+                                        <td><span>Buurtapotheek Albergen</span></td>
+                                        <td><span>just now</span></td>
+                                        <td><div class="switcher green"><span>billable </span><div class="switcher white"><span>&#8364; 3254,57</span></div></div></td>
+                                        <td><span>-</span></td>
                                     </tr>
                                     <tr>
-                                        <td>2934904</td>
-                                        <td>Alphega Apotheek De Betuwe</td>
-                                        <td>-</td>
-                                        <td><div class="switcher grey">awaits completion <div class="switcher white">12 min</div></div></td>
-                                        <td>-</td>
+                                        <td><span>2934904</span></td>
+                                        <td><span>Alphega Apotheek De Betuwe</span></td>
+                                        <td><span>-</span></td>
+                                        <td><div class="switcher grey"><span>awaits completion </span><div class="switcher white"><span>12 min</span></div></div></td>
+                                        <td><span>-</span></td>
                                     </tr>
                                     <tr>
-                                        <td>3765344</td>
-                                        <td>Buurtapotheek Albergen</td>
-                                        <td>-</td>
-                                        <td><div class="switcher grey">awaits completion <div class="switcher white">83 min</div></div></td>
-                                        <td>-</td>
+                                        <td><span>3765344</span></td>
+                                        <td><span>Buurtapotheek Albergen</span></td>
+                                        <td><span>-</span></td>
+                                        <td><div class="switcher grey"><span>awaits completion </span><div class="switcher white"><span>83 min</span></div></div></td>
+                                        <td><span>-</span></td>
                                     </tr>
                                     <tr>
-                                        <td>8675476</td>
-                                        <td>Alphega Apotheek De Betuwe</td>
-                                        <td>-</td>
-                                        <td><div class="switcher grey">awaits completion <div class="switcher white">156 min</div></div></td>
-                                        <td>-</td>
+                                        <td><span>8675476</span></td>
+                                        <td><span>Alphega Apotheek De Betuwe</span></td>
+                                        <td><span>-</span></td>
+                                        <td><div class="switcher grey"><span>awaits completion </span><div class="switcher white"><span>156 min</span></div></div></td>
+                                        <td><span>-</span></td>
                                     </tr>
                                     <tr>
-                                        <td>8476586</td>
-                                        <td>SAL Apotheek Brandevoort</td>
-                                        <td>-</td>
-                                        <td><div class="switcher grey">awaits completion <div class="switcher white">54 min</div></div></td>
-                                        <td>-</td>
+                                        <td><span>8476586</span></td>
+                                        <td><span>SAL Apotheek Brandevoort</span></td>
+                                        <td><span>-</span></td>
+                                        <td><div class="switcher grey"><span>awaits completion </span><div class="switcher white"><span>54 min</span></div></div></td>
+                                        <td><span>-</span></td>
                                     </tr>
                                     <tr>
-                                        <td>1263535</td>
-                                        <td>Apotheek De Poldervaart</td>
-                                        <td><div class="switcher orange">6 days</div></td>
-                                        <td><div class="switcher green">billable <div class="switcher white">&#8364; 7238,64</div></div></td>
-                                        <td>-</td>
+                                        <td><span>1263535</span></td>
+                                        <td><span>Apotheek De Poldervaart</span></td>
+                                        <td><div class="switcher orange"><span>6 days</span></div></td>
+                                        <td><div class="switcher green"><span>billable </span><div class="switcher white"><span>&#8364; 7238,64</span></div></div></td>
+                                        <td><span>-</span></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -199,15 +199,15 @@ require('php/functions.php');
                                     </tr>
                                     <tr>
                                         <td>Alphega Apotheek De Betuwe</td>
-                                        <td><div class="switcher red"><span>&#8364; 723,83</span></div></td>
+                                        <td><div class="switcher red"><span class="blinker">&#8364; 723,83</span></div></td>
                                     </tr>
                                     <tr>
                                         <td>SAL Apotheek Brandevoort</td>
-                                        <td><div class="switcher red"><span>&#8364; 2734,22</span></div></td>
+                                        <td><div class="switcher red"><span class="blinker">&#8364; 2734,22</span></div></td>
                                     </tr>
                                     <tr>
                                         <td>BENU Apotheek Ghen heij</td>
-                                        <td><div class="switcher red"><span>&#8364; 6743,90</span></div></td>
+                                        <td><div class="switcher red"><span class="blinker">&#8364; 6743,90</span></div></td>
                                     </tr>
                                 </tbody>
                             </table>
