Packing/distribution pages

--- a/distribution_step2.html
+++ b/distribution_step2.html
@@ -113,6 +113,13 @@ require('php/functions.php');
                                     <tr>
                                         <td><span>8793645</span></td>
                                         <td><div class="switcher red"><span class="blinker fast">&#9200; 40 min </span><div class="switcher white"><span>today 16:00</span></div></div></td>
+                                        <table class="stats">
+                                            <tbody>
+                                                <tr>
+                                                    <td><span>8793645</span></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
                                     </tr>
                                 </tbody>
                             </table>
