Make row clickable

--- a/billing_step1.html
+++ b/billing_step1.html
@@ -122,7 +122,7 @@ require('php/functions.php');
                                         <td><div class="switcher grey"><span>awaits completion </span><div class="switcher white"><span>489 min</span></div></div></td>
                                         <td><span>-</span></td>
                                     </tr>
-                                    <tr>
+                                    <tr OnClick="document.location='billing_stepA1.html'" style="cursor:pointer">
                                         <td><span>8793645</span></td>
                                         <td><span>SAL Apotheek Brandevoort</span></td>
                                         <td><span>1 day</span></td>
