--- a/billing.html
+++ b/billing.html
@@ -297,7 +297,7 @@ require('php/functions.php');
                                 <label OnClick='Previous()'>Previous</label>
                                 <label id='pages'>
                                     <?php
-                                        $items = GetAmountOfStockPages();
+                                        /*$items = GetAmountOfStockPages();
                                         
                                         for ($i=0; $i < $items / 10; $i++) {
                                             $j = $i + 1;
@@ -307,7 +307,7 @@ require('php/functions.php');
                                             } else {
                                                 echo "<label id='$k' OnClick='GoToPage(this)'>$j </label>";
                                             }  
-                                        }
+                                        }*/
                                     ?>
                                 </label>
                                 <label OnClick='Next()'>Next</label>
