--- a/distribution_step1.html
+++ b/distribution_step1.html
@@ -91,7 +91,7 @@ require('php/functions.php');
                         <div class="cont3 card">
                             <header>
                                 <h4 class="title">Orders ready for packing</h4>
-                                <p class="description">Select an order to start packing process</p>
+                                <p class="description">Select an order to view its contents</p>
                                 <div class="row">
                                     <div class="cont12 card right content">
                                         <input id='stock_search' class='cont12' type='text'></input>
@@ -99,20 +99,24 @@ require('php/functions.php');
                                 </div>
                             </header>
                             <table class="stats">
-                                <col style="width:30%">
-                                <col style="width:70%">
+                                <col style="width:57%">
+                                <col style="width:43%">
                                 <tbody>
                                     <tr>
-                                        <th><span>Order ID</span></th>
-                                        <th><span>Pack before</span></th>
+                                        <th>Costumer name</th>
+                                        <th>Awaiting</th>
                                     </tr>
                                     <tr>
-                                        <td><span>6152374</span></td>
-                                        <td><div class="switcher grey"><span>&#9200; 1480 min </span><div class="switcher white"><span>tomorrow 16:00</span></div></div></td>
+                                        <td>Alphega Apotheek De Betuwe</td>
+                                        <td><div class="switcher red"><span>&#8364; 723,83</span></div></td>
                                     </tr>
                                     <tr>
-                                        <td><span>8793645</span></td>
-                                        <td><div class="switcher red"><span class="blinker fast">&#9200; 40 min </span><div class="switcher white"><span>today 16:00</span></div></div></td>
+                                        <td>SAL Apotheek Brandevoort</td>
+                                        <td><div class="switcher red"><span>&#8364; 2734,22</span></div></td>
+                                    </tr>
+                                    <tr>
+                                        <td>BENU Apotheek Ghen heij</td>
+                                        <td><div class="switcher red"><span>&#8364; 6743,90</span></div></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -125,7 +129,7 @@ require('php/functions.php');
                         <div class="cont9 card">
                             <header>
                                 <h4 class="title">Order Display</h4>
-                                <p class="description">Select an order to view its contents</p>
+                                <p class="description">Select an order to create a new invoice</p>
                                 <div class="row">
                                     <div class="cont12 card right content">
                                         <input id='stock_search' class='cont12' type='text'></input>
