More  tables sortable

--- a/billing_stepA1.html
+++ b/billing_stepA1.html
@@ -50,7 +50,7 @@ require('php/functions.php');
                                 <h4 class="title">Creating invoice for order <b>8793645</b></h4>
                                 <p class="description">Select items you want to add to invoice</p>
                             </header>
-                            <table class="products">
+                            <table class="products sortable">
                                 <col style="width:5%">
                                 <col style="width:57%">
                                 <col style="width:8%">
