--- a/distribution_step2.html
+++ b/distribution_step2.html
@@ -99,7 +99,7 @@ require('php/functions.php');
                                     </div>
                                 </div>
                             </header>
-                            <table class="stats">
+                            <table class="stats sortable">
                                 <col style="width:30%">
                                 <col style="width:70%">
                                 <thead>
@@ -142,7 +142,7 @@ require('php/functions.php');
                                     </div>
                                 </div>
                             </header>
-                            <table class="stats">
+                            <table class="stats sortable">
                                 <col style="width:10%">
                                 <col style="width:28%">
                                 <col style="width:20%">
