--- a/billing_stepB1.html
+++ b/billing_stepB1.html
@@ -88,7 +88,7 @@ require('php/functions.php');
                                     </div>
                                 </div>
                             </header>
-                            <table class="stats">
+                            <table class="stats sortable">
                                 <col style="width:10%">
                                 <col style="width:28%">
                                 <col style="width:20%">
@@ -192,7 +192,7 @@ require('php/functions.php');
                                     </div>
                                 </div>
                             </header>
-                            <table class="stats">
+                            <table class="stats sortable">
                                 <col style="width:57%">
                                 <col style="width:43%">
                                 <thead>
