Progress bar instead of -

--- a/billing_step1.html
+++ b/billing_step1.html
@@ -121,7 +121,7 @@ require('php/functions.php');
                                     <tr>
                                         <td><span>8272348</span></td>
                                         <td><span>Alphega Apotheek Cleij</span></td>
-                                        <td><span>-</span></td>
+                                        <td><progress>Unknown</progress></td>
                                         <td><div class="switcher grey"><span>awaits completion </span><div class="switcher white"><span>489 min</span></div></div></td>
                                         <td><span>-</span></td>
                                     </tr>
@@ -142,28 +142,28 @@ require('php/functions.php');
                                     <tr>
                                         <td><span>2934904</span></td>
                                         <td><span>Alphega Apotheek De Betuwe</span></td>
-                                        <td><span>-</span></td>
+                                        <td><progress>Unknown</progress></td>
                                         <td><div class="switcher grey"><span>awaits completion </span><div class="switcher white"><span>12 min</span></div></div></td>
                                         <td><span>-</span></td>
                                     </tr>
                                     <tr>
                                         <td><span>3765344</span></td>
                                         <td><span>Buurtapotheek Albergen</span></td>
-                                        <td><span>-</span></td>
+                                        <td><progress>Unknown</progress></td>
                                         <td><div class="switcher grey"><span>awaits completion </span><div class="switcher white"><span>83 min</span></div></div></td>
                                         <td><span>-</span></td>
                                     </tr>
                                     <tr>
                                         <td><span>8675476</span></td>
                                         <td><span>Alphega Apotheek De Betuwe</span></td>
-                                        <td><span>-</span></td>
+                                        <td><progress>Unknown</progress></td>
                                         <td><div class="switcher grey"><span>awaits completion </span><div class="switcher white"><span>156 min</span></div></div></td>
                                         <td><span>-</span></td>
                                     </tr>
                                     <tr>
                                         <td><span>8476586</span></td>
                                         <td><span>SAL Apotheek Brandevoort</span></td>
-                                        <td><span>-</span></td>
+                                        <td><progress>Unknown</progress></td>
                                         <td><div class="switcher grey"><span>awaits completion </span><div class="switcher white"><span>54 min</span></div></div></td>
                                         <td><span>-</span></td>
                                     </tr>
