Step 2 page for distribution

--- a/distribution_step2.html
+++ b/distribution_step2.html
@@ -38,201 +38,89 @@ require('php/functions.php');
             </header>
             <div class="container-main"> 
                 <header class="hero">
-                    <ul class="items">           
-                        <a href="index.html">
-                            <li>
-                                <div class="notify"><div class="blinker green"></div></div>
-                                <img src="img/dashboard-white.png">
-                                <span class="description">Dash&shy;board</span>
-                            </li>
-                        </a>
-                        <a href="order.php">
-                            <li>
-                                <div class="notify"><div class="blinker green"></div></div>
-                                <img src="img/neworder.png">
-                                <span class="description">Create Order</span>
-                            </li>
-                        </a>
-                        <a href="stock.php">
-                            <li>
-                                <div class="notify"><div class="blinker red"></div></div>
-                                <img src="img/stock.png">
-                                <span class="description">Stock</span>
-                            </li>
-                        </a>
-                        <a href="billing.php">
-                            <li>
-                                <div class="notify"><div class="blinker orange"></div></div>
-                                <img src="img/invoice.png">
-                                <span class="description">Billing</span>
-                            </li>
-                        </a>
-                        <a href="distribution.php">
-                            <li>
-                                <div class="notify"><div class="blinker red"></div></div>
-                                <img src="img/distr.png">
-                                <span class="description">Distribution</span>
-                            </li>
-                        </a>
-                    </ul>
+                    <div class="step">
+                        <progress>Unknown</progress>
+                        <button type="button" formaction="billing_step1.html">Cancel packing</button>
+                    </div>
                 </header>
                 <div class="main">
                     <div class="row">
-                        <div class="cont4 card">
-                            k
-                        </div>
-                        <div class="cont4 card">
-                            <img class="gauge" src="img/gauge.png">
-                        </div>
-                        <div class="cont4 card">
-                            k
-                        </div>
-                    </div>
-                    <div class="row">
                         <div class="cont3 card">
                             <header>
-                                <h4 class="title">Orders ready for packing</h4>
-                                <p class="description">Select an order to start packing process</p>
+                                <h4 class="title">Customer details for order <b>8793645</b></h4>
+                                <p class="description">SAL Apotheek Brandevoort</p>
+                            </header>
+                            <table class="stats">
+                                <col style="width:30%">
+                                <col style="width:70%">
+                                <tbody>
+                                    <tr>
+                                        <td><span>Contact</span></td>
+                                        <td><span>Dhr. W.H. Eekhof</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td><span>Address</span></td>
+                                        <td><span>De Plaetse 86</br>5708 ZJ Helmond</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td><span>Type</span></td>
+                                        <td><span>Billing</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td><span>Phone</span></td>
+                                        <td><span>0492 370 047</span></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <button>Print shipping label</button>
+                        </div>
+                        <div class="cont9 card">
+                            <header>
+                                <h4 class="title">Order contents for order <b>8793645</b></h4>
+                                <p class="description">&#9200; 40 min</p>
                                 <div class="row">
                                     <div class="cont12 card right content">
                                         <input id='stock_search' class='cont12' type='text'></input>
                                     </div>
-                                </div>
+                                </div>               
                             </header>
                             <table class="stats sortable">
-                                <col style="width:30%">
-                                <col style="width:70%">
+                                <col style="width:50%">
+                                <col style="width:10%">
+                                <col style="width:15%">
+                                <col style="width:25%">
                                 <thead>
                                     <tr>
-                                        <th><span>Order ID</span></th>
-                                        <th><span>Pack before</span></th>
+                                        <th><span>Product</span></th>
+                                        <th><span>Qt.</span></th>
+                                        <th><span>Box</span></th>
+                                        <th><span>Mark as packed</span></th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><span>6152374</span></td>
-                                        <td><div class="switcher grey"><span>&#9200; 1480 min </span><div class="switcher white"><span>tomorrow 16:00</span></div></div></td>
+                                        <td><span>Selokeen<sup>&#174;</sup> ZOC 50 (47,5 mg)</span></td>
+                                        <td><span>150</span></td>
+                                        <td><div class="switcher grey"><span>A468</span></div></td>
+                                        <td><button type="button">&#x1F4E6 Mark all packed</button></td>
                                     </tr>
                                     <tr>
-                                        <td><span>8793645</span></td>
-                                        <td><div class="switcher red"><span class="blinker fast">&#9200; 40 min </span><div class="switcher white"><span>today 16:00</span></div></div></td>
-                                        <table class="stats">
-                                            <tbody>
-                                                <tr>
-                                                    <td><span>8793645</span></td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
+                                        <td><span>MAXALT<sup>&#174;</sup> smelt (10 mg) (grootverp. 50st.)</span></td>
+                                        <td><span>5</span></td>
+                                        <td><div class="switcher grey"><span>&#x1F916ID 7 </span><div class="switcher white">&#x00B1; 3 min.</div></div></td>
+                                        <td><progress>Unknown</progress></td>
+                                    </tr>
+                                    <tr>
+                                        <td><span>Medikinet CR<sup>&#174;</sup> (30 mg) (grootverp. 50st.)</span></td>
+                                        <td><span>3</span></td>
+                                        <td><div class="switcher grey"><span>B238</span></div></td>
+                                        <td><button type="button">&#x1F4E6 Mark all packed</button></td>
                                     </tr>
                                 </tbody>
                             </table>
                             <footer>
                                 <label>Previous</label>
                                 <label><b>1</b></label>
-                                <label>Next</label>
-                            </footer>
-                        </div>
-                        <div class="cont9 card">
-                            <header>
-                                <h4 class="title">Order Display</h4>
-                                <p class="description">Select an order to view its contents</p>
-                                <div class="row">
-                                    <div class="cont12 card right content">
-                                        <input id='stock_search' class='cont12' type='text'></input>
-                                    </div>
-                                </div>
-                            </header>
-                            <table class="stats sortable">
-                                <col style="width:10%">
-                                <col style="width:28%">
-                                <col style="width:20%">
-                                <col style="width:22%">
-                                <col style="width:20%">
-                                <thead>
-                                    <tr>
-                                        <th>Order ID</th>
-                                        <th>Costumer name</th>
-                                        <th>Order completed for</th>
-                                        <th>Status</th>
-                                        <th>First invoiced</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>7563548</td>
-                                        <td>Buurtapotheek Albergen</td>
-                                        <td><div class="switcher red">20 days</div></td>
-                                        <td><div class="switcher orange">invoiced <div class="switcher white">2&#215;</div></div></td>
-                                        <td><div class="switcher orange">17-12-2017 <div class="switcher white">19 days ago</div></div></td>
-                                    </tr>
-                                    <tr>
-                                        <td>3245785</td>
-                                        <td>Apotheek De Poldervaart</td>
-                                        <td>2 days</td>
-                                        <td><div class="switcher green">billable <div class="switcher white">&#8364; 4537,78</div></div></td>
-                                        <td>-</td>
-                                    </tr>
-                                    <tr>
-                                        <td>8272348</td>
-                                        <td>Alphega Apotheek Cleij</td>
-                                        <td>-</td>
-                                        <td><div class="switcher grey">awaits completion <div class="switcher white">489 min</div></div></td>
-                                        <td>-</td>
-                                    </tr>
-                                    <tr>
-                                        <td>8793645</td>
-                                        <td>SAL Apotheek Brandevoort</td>
-                                        <td>1 day</td>
-                                        <td><div class="switcher green">billable <div class="switcher white">&#8364; 1036,65</div></div></td>
-                                        <td>-</td>
-                                    </tr>
-                                    <tr>
-                                        <td>6152374</td>
-                                        <td>Buurtapotheek Albergen</td>
-                                        <td>just now</td>
-                                        <td><div class="switcher green">billable <div class="switcher white">&#8364; 3254,57</div></div></td>
-                                        <td>-</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2934904</td>
-                                        <td>Alphega Apotheek De Betuwe</td>
-                                        <td>-</td>
-                                        <td><div class="switcher grey">awaits completion <div class="switcher white">12 min</div></div></td>
-                                        <td>-</td>
-                                    </tr>
-                                    <tr>
-                                        <td>3765344</td>
-                                        <td>Buurtapotheek Albergen</td>
-                                        <td>-</td>
-                                        <td><div class="switcher grey">awaits completion <div class="switcher white">83 min</div></div></td>
-                                        <td>-</td>
-                                    </tr>
-                                    <tr>
-                                        <td>8675476</td>
-                                        <td>Alphega Apotheek De Betuwe</td>
-                                        <td>-</td>
-                                        <td><div class="switcher grey">awaits completion <div class="switcher white">156 min</div></div></td>
-                                        <td>-</td>
-                                    </tr>
-                                    <tr>
-                                        <td>8476586</td>
-                                        <td>SAL Apotheek Brandevoort</td>
-                                        <td>-</td>
-                                        <td><div class="switcher grey">awaits completion <div class="switcher white">54 min</div></div></td>
-                                        <td>-</td>
-                                    </tr>
-                                    <tr>
-                                        <td>1263535</td>
-                                        <td>Apotheek De Poldervaart</td>
-                                        <td><div class="switcher orange">6 days</div></td>
-                                        <td><div class="switcher green">billable <div class="switcher white">&#8364; 7238,64</div></div></td>
-                                        <td>-</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                            <footer>
-                                <label>Previous</label>
-                                <label><b>1</b> 2</label>
                                 <label>Next</label>
                             </footer>
                         </div>
