--- a/billing_step1.html
+++ b/billing_step1.html
@@ -210,7 +210,7 @@ require('php/functions.php');
                                         <td>SAL Apotheek Brandevoort</td>
                                         <td><div class="switcher red"><span class="blinker">&#8364; 2734,22</span></div></td>
                                     </tr>
-                                    <tr>
+                                    <tr OnClick="document.location='billing_stepB1.html'" style="cursor:pointer">
                                         <td>BENU Apotheek Ghen heij</td>
                                         <td><div class="switcher red"><span class="blinker">&#8364; 6743,90</span></div></td>
                                     </tr>
