--- a/billing_stepA1.html
+++ b/billing_stepA1.html
@@ -40,7 +40,8 @@ require('php/functions.php');
                 <header class="hero">
                     <div class="step">
                         <progress>Unknown</progress>
-                        <button type="button" formaction="billing_step1.html">Cancel invoice</button>
+                        <button type="button" formaction="billing_step1.html">&#x274C; Cancel invoice</button>
+                        <button>&#x1F4BE; Print &amp; save invoice</button>
                     </div>
                 </header>
                 <div class="main">
