--- a/distribution_step2.html
+++ b/distribution_step2.html
@@ -40,7 +40,7 @@ require('php/functions.php');
                 <header class="hero">
                     <div class="step">
                         <progress>Unknown</progress>
-                        <button type="button" formaction="billing_step1.html">Cancel packing</button>
+                        <button type="button" formaction="billing_step1.html">&#x274C; Cancel packing</button>
                     </div>
                 </header>
                 <div class="main">
@@ -77,7 +77,7 @@ require('php/functions.php');
                         <div class="cont9 card">
                             <header>
                                 <h4 class="title">Order contents for order <b>8793645</b></h4>
-                                <p class="description">&#9200; 40 min</p>
+                                <p class="description">&#9200;&#x1F4E4 40 min</p>
                                 <div class="row">
                                     <div class="cont12 card right content">
                                         <input id='stock_search' class='cont12' type='text'></input>
