--- a/billing_stepB1.html
+++ b/billing_stepB1.html
@@ -38,50 +38,17 @@ require('php/functions.php');
             </header>
             <div class="container-main"> 
                 <header class="hero">
-                    <ul class="items">           
-                        <a href="index.html">
-                            <li>
-                                <div class="notify"><div class="blinker green"></div></div>
-                                <img src="img/dashboard-white.png">
-                                <span class="description">Dash&shy;board</span>
-                            </li>
-                        </a>
-                        <a href="order.php">
-                            <li>
-                                <div class="notify"><div class="blinker green"></div></div>
-                                <img src="img/neworder.png">
-                                <span class="description">Create Order</span>
-                            </li>
-                        </a>
-                        <a href="stock.php">
-                            <li>
-                                <div class="notify"><div class="blinker red"></div></div>
-                                <img src="img/stock.png">
-                                <span class="description">Stock</span>
-                            </li>
-                        </a>
-                        <a href="billing.php">
-                            <li>
-                                <div class="notify"><div class="blinker orange"></div></div>
-                                <img src="img/invoice.png">
-                                <span class="description">Billing</span>
-                            </li>
-                        </a>
-                        <a href="distribution.php">
-                            <li>
-                                <div class="notify"><div class="blinker red"></div></div>
-                                <img src="img/distr.png">
-                                <span class="description">Distribution</span>
-                            </li>
-                        </a>
-                    </ul>
+                    <div class="step">
+                        <progress>Unknown</progress>
+                        <button type="button" formaction="billing_step1.html">&#x21A9; Return to <b>Order Display</b></button>
+                    </div>
                 </header>
                 <div class="main">
                     <div class="row">
                         <div class="cont9 card">
                             <header>
                                 <h4 class="title">Outstanding invoices for customer <b>BENU Apotheek Ghen heij</b></h4>
-                                <p class="description">Select an order to create a new invoice</p>
+                                <p class="description"><div class="switcher red">&#8364; 6743,90</div></p>
                                 <div class="row">
                                     <div class="cont12 card right content">
                                         <input id='stock_search' class='cont12' type='text'></input>
@@ -90,129 +57,45 @@ require('php/functions.php');
                             </header>
                             <table class="stats sortable">
                                 <col style="width:10%">
-                                <col style="width:28%">
-                                <col style="width:20%">
+                                <col style="width:10%">
+                                <col style="width:18%">
                                 <col style="width:22%">
-                                <col style="width:20%">
+                                <col style="width:22%">
+                                <col style="width:18%">
                                 <thead>
                                     <tr>
                                         <th><span>Order ID</span></th>
-                                        <th><span>Costumer name</span></th>
-                                        <th><span>Order completed for</span></th>
+                                        <th><span>Invoice ID</span></th>
+                                        <th><span>Invoice total</span></th>
+                                        <th><span>First sent</span></th>
                                         <th><span>Status</span></th>
-                                        <th><span>First invoiced</span></th>
+                                        <th><span>Mark paid</span></th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
                                         <td><span>7563548</span></td>
-                                        <td><span>Buurtapotheek Albergen</span></td>
-                                        <td><div class="switcher red"><span>20 days</span></div></td>
-                                        <td><div class="switcher orange"><span>invoiced </span><div class="switcher white"><span>2&#215;</span></div></div></td>
+                                        <td><span>23874</span></td>
+                                        <td><div class="switcher red"><span>&#8364; 845,27</span></div></td>
                                         <td><div class="switcher orange"><span>17-12-2017 </span><div class="switcher white"><span>19 days ago</span></div></div></td>
+                                        <td><div class="switcher orange"><span>sent </span><div class="switcher white"><span>2&#215;</span></div></div></td>
+                                        <td><button>&#x2714; Mark paid</button></td>
                                     </tr>
                                     <tr>
                                         <td><span>3245785</span></td>
-                                        <td><span>Apotheek De Poldervaart</span></td>
-                                        <td><span>2 days</span></td>
-                                        <td><div class="switcher green"><span>billable </span><div class="switcher white"><span>&#8364; 4537,78</span></div></div></td>
-                                        <td><span>-</span></td>
+                                        <td><span>12964</span></td>
+                                        <td><div class="switcher red"><span>&#8364; 2039,55</span></div></td>
+                                        <td><div class="switcher red"><span>2-12-2017 </span><div class="switcher white"><span>34 days ago</span></div></div></td>
+                                        <td><div class="switcher red"><span>sent </span><div class="switcher white"><span class="blinker fast">3&#215;</span></div></div></td></td>
+                                        <td><button>&#x2714; Mark paid</button></td>
                                     </tr>
                                     <tr>
                                         <td><span>8272348</span></td>
-                                        <td><span>Alphega Apotheek Cleij</span></td>
-                                        <td><span>-</span></td>
-                                        <td><div class="switcher grey"><span>awaits completion </span><div class="switcher white"><span>489 min</span></div></div></td>
-                                        <td><span>-</span></td>
-                                    </tr>
-                                    <tr OnClick="document.location='billing_stepA1.html'" style="cursor:pointer">
-                                        <td><span>8793645</span></td>
-                                        <td><span>SAL Apotheek Brandevoort</span></td>
-                                        <td><span>1 day</span></td>
-                                        <td><div class="switcher green"><span>billable </span><div class="switcher white"><span>&#8364; 1036,65</span></div></div></td>
-                                        <td><span>-</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td><span>6152374</span></td>
-                                        <td><span>Buurtapotheek Albergen</span></td>
-                                        <td><span>just now</span></td>
-                                        <td><div class="switcher green"><span>billable </span><div class="switcher white"><span>&#8364; 3254,57</span></div></div></td>
-                                        <td><span>-</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td><span>2934904</span></td>
-                                        <td><span>Alphega Apotheek De Betuwe</span></td>
-                                        <td><span>-</span></td>
-                                        <td><div class="switcher grey"><span>awaits completion </span><div class="switcher white"><span>12 min</span></div></div></td>
-                                        <td><span>-</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td><span>3765344</span></td>
-                                        <td><span>Buurtapotheek Albergen</span></td>
-                                        <td><span>-</span></td>
-                                        <td><div class="switcher grey"><span>awaits completion </span><div class="switcher white"><span>83 min</span></div></div></td>
-                                        <td><span>-</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td><span>8675476</span></td>
-                                        <td><span>Alphega Apotheek De Betuwe</span></td>
-                                        <td><span>-</span></td>
-                                        <td><div class="switcher grey"><span>awaits completion </span><div class="switcher white"><span>156 min</span></div></div></td>
-                                        <td><span>-</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td><span>8476586</span></td>
-                                        <td><span>SAL Apotheek Brandevoort</span></td>
-                                        <td><span>-</span></td>
-                                        <td><div class="switcher grey"><span>awaits completion </span><div class="switcher white"><span>54 min</span></div></div></td>
-                                        <td><span>-</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td><span>1263535</span></td>
-                                        <td><span>Apotheek De Poldervaart</span></td>
-                                        <td><div class="switcher orange"><span>6 days</span></div></td>
-                                        <td><div class="switcher green"><span>billable </span><div class="switcher white"><span>&#8364; 7238,64</span></div></div></td>
-                                        <td><span>-</span></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                            <footer>
-                                <label>Previous</label>
-                                <label><b>1</b> 2</label>
-                                <label>Next</label>
-                            </footer>
-                        </div>
-                        <div class="cont3 card">
-                            <header>
-                                <h4 class="title">Outstanding amounts</h4>
-                                <p class="description">Select a costumer to view invoices</p>
-                                <div class="row">
-                                    <div class="cont12 card right content">
-                                        <input id='stock_search' class='cont12' type='text'></input>
-                                    </div>
-                                </div>
-                            </header>
-                            <table class="stats sortable">
-                                <col style="width:57%">
-                                <col style="width:43%">
-                                <thead>
-                                    <tr>
-                                        <th>Costumer name</th>
-                                        <th>Awaiting</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>Alphega Apotheek De Betuwe</td>
-                                        <td><div class="switcher red"><span class="blinker">&#8364; 723,83</span></div></td>
-                                    </tr>
-                                    <tr>
-                                        <td>SAL Apotheek Brandevoort</td>
-                                        <td><div class="switcher red"><span class="blinker">&#8364; 2734,22</span></div></td>
-                                    </tr>
-                                    <tr>
-                                        <td>BENU Apotheek Ghen heij</td>
-                                        <td><div class="switcher red"><span class="blinker">&#8364; 6743,90</span></div></td>
+                                        <td><span>12673</span></td>
+                                        <td><div class="switcher red"><span>&#8364; 3859,28</span></div></td>
+                                        <td><div class="switcher orange"><span>21-12-2017 </span><div class="switcher white"><span>15 days ago</span></div></div></td>
+                                        <td><div class="switcher orange"><span>sent </span><div class="switcher white"><span>2&#215;</span></div></div></td>
+                                        <td><button>&#x2714; Mark paid</button></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -221,6 +104,30 @@ require('php/functions.php');
                                 <label><b>1</b></label>
                                 <label>Next</label>
                             </footer>
+                        </div>
+                        <div class="cont3 card">
+                            <header>
+                                <h4 class="title">Customer information</h4>
+                                <p class="description">BENU Apotheek Ghen heij</p>
+                            </header>
+                            <table class="stats">
+                                <col style="width:30%">
+                                <col style="width:70%">
+                                <tbody>
+                                    <tr>
+                                        <td><span>Contact</span></td>
+                                        <td><span>Mevr. Drs. V. la Fontaine</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td><span>Phone</span></td>
+                                        <td><span><a href="tel:045 521 0772">045 521 0772</a></span></td>
+                                    </tr>
+                                    <tr>
+                                        <td><span>URL</span></td>
+                                        <td><span><a href="https://ghenheij.benuapotheek.nl" target="_blank">ghenheij.benuapotheek.nl</a></span></td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                     <footer>
